    o #704958 by davisbc1982: Fix working in pager exposed form.
    o #508124 by dereine: "accept_null" should have been "accept null" in boolean filter definitions.
    o #513396 by yhager: Attempt multi-byte safety for "trim at word boundary" setting.
    o #418230 by Scott Reynolds: Views adds wrong nid with "Node: Has new content".

Views 6.x-3.0-alpha2
    o #396380 by merlinofchaos, dereine and dagmar: Initial support for GROUP BY queries!!!!!!!!!!!!
    o #535868 by dagmar: Exposed forms as plugins, helping to isolate exposed form code and increase the ability for modules to change the behavior of exposed forms.
    o #630194 by dereine: Convert access and cache plugins to use the newer option_definition() method of storing options.
    o #633482 by dagmar: pre_execute() method needs to be called on exposed forms.
    o #535206: Attachment displays repeat exposed filters because exposed filters were left hanging around during cloning.
    o #550560 by donquixote: Fix unterminated string in views.help.ini that breaks under php 5.3
    o #450346 by lefnire: Inherit Exposed Filters sometimes hides part of the parent exposed filters
    o #592476 by Garrett Albright: Remove redundant CSS from views-list.css
    o #366250 by Markus Petrux: Fix glitches with tabledrag and jQuery 1.3.
    o #581616 by cangeceiro: Defend text color from themes in Views UI.
    o #589484 by Markus Petrux: External styles could not properly provide advanced help files.
    o #494490 by Niels Hackius: User picture incorrectly set as an inline element when it should be block.
    o #616956 by neochief: Exposed form labels should have "for" keyword.
    o #620046 by cedric: Date validate handler does not fallback properly causing sporadic improper validation.
    o #515564: Views UI would fail to rearrange with > 25 fields.
    o #452384: Fix PHP 5.3 compatibility.
    o #579308: group by argument handler was misnamed and did not work at all.